k8s/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubechat-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubechat-api
  template:
    metadata:
      labels:
        app: kubechat-api
    spec:
      containers:
        - name: api
          image: ghcr.io/thomasfoydel/kubechat-api:latest
          
          ports:
            - containerPort: 3000
