k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubechat-api
spec:
  selector:
    app: kubechat-api
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
