k8s/base/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: kubechat-api

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - kubechat.duckdns.org
      secretName: kubechat-api-tls

  rules:
    - host: kubechat.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kubechat-api
                port:
                  number: 3000

          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: kubechat-api
                port:
                  number: 3000

          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: kubechat-api
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubechat-frontend
                port:
                  number: 3000
